# Metroid-Dread-Autosplitter

./: .gitignore  LICENSE  README.md  data.json  setup.cfg
src/: capture.py  config.py  livesplit.py  main.py  route.py  routes.json  variables.py
src/auto_splitter/: auto_splitter.py  capture.py  coordinates.py  livesplit.py  route.py  variables.py
src/layouts/: calibrate.py  camera.py  camera_test.py  livesplit.py  route.py
tests/: route_test.py
