[metadata]
name = Metroid-Dread-Autosplitter
version = 0.0.1
author = Trevor Carmichael
author_email = trevor.j.carmichael@gmail.com
description = A basic auto splitter for Metroid Dread. Reads text from the screen to determine location changes and receiving upgrades. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src